Added login and register functions.

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,6 +1,6 @@
 <nav>
-    Insert Logo Here
-    <a href="/index.html">Home</a>
+    HackSquad
+    <a href="/">Home</a>
     <a href="/lessons">Lessons</a>
     <a href="/simulator">Simulator</a>
     <a href="/login">Sign up/Log In</a>
