--- a/public/home.html
+++ b/public/home.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hackmann2020</title>
-  </head>
-  <body>
-    <p>Hackmann2020</p>
-  </body>
+    <head>
+        <title>Financial Literacy for Youth</title>
+        <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="script.js"></script>
+    </head>
+    <body>
+        <header id="header"></header>
+        <section>
+            <div>
+                <h1>About our project</h1>
+                <p>
+                    HackSquad is a submission for the HackMann 2020. It is a project used to teach financial literacy to the youth so in the future they can learn how to control debts and use money wisely!
+                </p>
+            </div>
+            <div>
+                <h1 style="text-align: center;">Insert image here.</h1>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h1>About us</h1>
+                <p>Our team includes: Celia, Hackermon, Harsh Kari, randomperson2342, SokkaNeverDies1</p>
+            </div>
+        </section>
+    </body>
 </html>
