--- a/public/register/index.html
+++ b/public/register/index.html
@@ -10,18 +10,18 @@
     <body>
         <header id="header"></header>
         <center>
-            <h1>Login to your account</h1>
-            <form action="/login" method="POST">
+            <h1>Register an account to save your progress</h1>
+            <form action="/register" method="POST">
                 <div>
-                    <input type="text" name="user" placeholder="Username">
+                    <input type="text" name="user" placeholder="Username" required>
                 </div>
                 <div>
-                    <input type="password" name="password" placeholder="Password">
+                    <input type="password" name="password" placeholder="Password" required>
                 </div>
                 <div>
-                    <input type="submit" value="Login">
+                    <input type="submit" value="Register">
                 </div><br/>
-                don't have an account? <a href="/register">Register here</a>
+                already have an account? <a href="/login">Login here</a>
             </form>
         </center>
     </body>
