Added the lessons

--- a/public/lessons/index.html
+++ b/public/lessons/index.html
@@ -11,9 +11,9 @@
         <header id="header"></header>
         <section>
             <div>
-                <h1><a href="example.html">Lesson 1</a></h1>
+                <h1><a href="stocks.html">Stock Market</a></h1>
                 <p>
-                    In this lesson, learn about stuff and other stuff!
+                    In this lesson, you learn about the stock market and investing in the stock market.
                 </p>
             </div>
         </section>
