--- a/public/navbar.html
+++ b/public/navbar.html
@@ -3,5 +3,6 @@
     <a href="/">Home</a>
     <a href="/lessons">Lessons</a>
     <a href="/simulator">Simulator</a>
-    <a href="/login">Sign up/Log In</a>
+   <button id="login" onclick="window.location = '/login';">Login</button>
+    <!-- <a href="/login">Sign up/Log In</a> -->
 </nav>
