--- a/public/lessons/index.html
+++ b/public/lessons/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Financial Literacy for Youth</title>
+        <title>Bankology</title>
         <meta charset="utf-8">
         <link href="../style.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -13,7 +13,7 @@
             <div>
                 <h1><a href="stocks.html">Stock Market</a></h1>
                 <p>
-                    In this lesson, you learn about the stock market and investing in the stock market.
+                    In this lesson, you learn about the stock market and investing in the stock market. You will also learn the advantages and disadvantages to investing in the stock market.
                 </p>
             </div>
         </section>
