--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,8 +1,9 @@
 <nav>
-    HackSquad
+    Bankology
     <a href="/">Home</a>
     <a href="/lessons">Lessons</a>
     <a href="/simulator">Simulator</a>
+    <a href="/about">About Us</a>
    <button id="login" onclick="window.location = '/login';">Login</button>
     <!-- <a href="/login">Sign up/Log In</a> -->
 </nav>
