--- a/public/simulator/index.html
+++ b/public/simulator/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Financial Literacy for Youth</title>
+        <title>Bankology</title>
         <meta charset="utf-8">
         <link href="../style.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -11,10 +11,8 @@
         <header id="header"></header>
         <section>
             <div>
-                <h1>This is where we can have our game thing</h1>
-                <p>
-                    if we decide to make it
-                </p>
+                <h h style="color:blue;">This simulation was created to give young learners the chance to experiment and try out different stratagies in terms of investing. The game gives the participants a chance to find which stratagies work, and don't work when banking or investing.</h1>
+                <a href="https://prezi.com/view/p0Gy4D1W77OfqK26kYEi/">Click Me</a>
             </div>
         </section>
     </body>
