--- a/public/error.html
+++ b/public/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Financial Literacy for Youth</title>
+        <title>Bankology</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
