--- a/public/about/index.html
+++ b/public/about/index.html
@@ -36,6 +36,7 @@
                 <img src="https://davatar.pwnsquad.net/690052783822471209" class="avatar">
                 <h2>Ollie Aizer</h2>
                 <p>My name is Ollie and my favorite food is Pizza, I'm a rising 8th grader and I do hackathons because I like building stuff.</p>
+                <a href="https://www.youtube.com/watch?v=xfr64zoBTAQ">personal news station</a>
               </div>
               <div class="teammember">
                 <img src="https://davatar.pwnsquad.net/431883074054258688" class="avatar">
@@ -51,6 +52,12 @@
                 <img src="https://davatar.pwnsquad.net/714544278478520331" class="avatar">
                 <h2>Eniola Oyewole</h2>
                 <p>Helo! My name is Daniel (otherwise known as Hackermon) and I am a 7th grade. I found HackMann on Devpost and decided to join and work with other people to create awesome sutff!</p>
+                <a href="https://jdaniels.me">my website</a>
+              </div>
+              <div class="teammember">
+                <img src="https://cdn.discordapp.com/embed/avatars/2.png" class="avatar">
+                <h2>Harsh Karia</h2>
+                <p>Hi. My name is Harsh Karia and I am a rising junior from California. Working on this hackathon with the team of Bankology was honestly an amazing experience. It was my first hackathon and I loved every bit of it. I will constantly be looking for more opportunities like this again.</p>
               </div>
             </div>
         </section>
