--- a/public/lessons/index.html
+++ b/public/lessons/index.html
@@ -4,10 +4,15 @@
         <title>Bankology</title>
         <meta charset="utf-8">
         <link href="../style.css" rel="stylesheet">
+        <style>
+          body{
+            color: black;
+          }
+        </style>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="../script.js"></script>
     </head>
-    <body>
+    <body>  
         <header id="header"></header>
         <section>
             <div>
@@ -15,7 +20,21 @@
                 <p>
                     In this lesson, you learn about the stock market and investing in the stock market. You will also learn the advantages and disadvantages to investing in the stock market.
                 </p>
-            </div>
-        </section>
+                <img src="stm.jpg" class="lessonimg">
+            </div><br>
+            <div>
+                <h1><a href="finance.html">Finance</a></h1>
+                <p>
+                    Learn about money and how to use money. This lesson will also go into the depth of using money in real life and give some example scenarios.
+                </p>  
+                <img src="fireal.jpg" class="lessonimg">
+            </div><br>
+            <div>
+              <h1><a href="habits.html"> Spending Wisely</a></h1>
+              <p>
+                In this lesson you will learn about what good spending habits are and how they can help you stay away from debt and problematic situations.
+              </p>
+              <img src="spendwisely.jpg" class="lessonimg">
+            </div><br>
     </body>
 </html>
