--- a/public/lessons/stocks.html
+++ b/public/lessons/stocks.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-          body{
-            background: url('../stocks.jpg');
-          }
-        </style>
-        <title>Bankology</title>
-        <link href="../style.css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="../script.js"></script>
-    </head>
-    <body>
-        <header id="header"></header>
-        <div id="lesson">
-            <h1>Stock Market</h1>
-            <p p style="color:pink;">
-                The stock market is a crazy place, and it is constantly changing. If you invest in a company that ends up crashing, then you can lose tons of money. However If you invest in a company that rockets then you can make tons of money. Because the stock market is so crazy, and stocks sometimes only crash for a day and come back up in value the next day, there are so many opportunities to invest. For a beginner one tip for investing in the stock market is to wait until the stock crashes, and the cost of a share is lower to invest, so that when it comes back up again you will have less money to pay off.
-            </p>
-            <h2>Investing in the Stock Market</h2>
-            <p p style="color:pink;">
-                When investing in stock it can often be a long term investment. The goal of investing in stock is to start with a company that has a low amount of money per share and by the end the company should be worth more than it started as and in turn you made money off that stock. If your investment pays off and the company is worth a lot and you think that it won’t improve anymore or it will start to go down soon. You should consider selling it. By selling stock at its peak, you can sell it for the most money. It is also important to try to sell it at its peak because if it starts to go down, then you lose money, and your investment might not end up paying off.
+  <head>
+    <style>
+      body{
+        background: url('../stocks.jpg');
+      }
+    </style>
+    <title>Bankology</title>
+    <link href="../style.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="../script.js"></script>
+  </head>
+  <body>
+    <header id="header"></header>
+    <div id="lesson">
+      <h1>Stock Market</h1>
+      <p>
+        The stock market is constantly changing and has many factors that impact it. Choosing the right company to invest in can make your life but choosing the wrong company can severely hurt your bank balance. A key thing to know before investing in stocks is understanding what makes a stock price change. The stock price is impacted by a simple principle called supply and demand. If a company’s goods are in high demand, then the stock price will generally be going up. However, stock price is also dependent on outside factors such as the public’s views of a company. If a company is viewed negatively by the public then it will decrease in its stock value. On the other hand, if people feel confident about a company, it’s stock price will increase. These are not all the factors that impact a stock.
+      </p>
+      <h2>Investing in the Stock Market</h2>
+      <p>
+        Know that when investing in stock short term investments are rare. The goal of investing in stock is to generate return over time, not instantaneous profit. Therefore it is important that you do your research on a company before investing in it. Look at factors such as its product, growth trends, leadership and management, well as public feelings towards the company. Another important factor to consider is the amount of excess money you have left over and whether using it in the stock market is right for you. Many people think that stock market investing is only for the rich or those who have way too much extra money, but that is not the case. Anybody can invest in the stock market as long as you put in the time and effort to understand it. 
+      </p>
+      <h2>More about the stock market</h2>
+      <p>
+        Starting to invest as early as possible is a great way to understand the stock market early and potentially increase your gains. When you start investing in the market earlier you can get accumulated to the trading methods and you will also start to observe the patterns that make a stock go up or down. Using this knowledge you will automatically be ahead of 80% of normal stock traders. An added benefit of starting early is that you will be earning even while going to college or school
 
-            </p>
-            <h2>More about the stock market</h2>
-            <p p style="color:pink;">
-                 When you invest in stock it is good to be proactive, however, if you have more money, you have more that you can risk in the stock market. When you are young and you are coming out of college probably with student debt, and not a high income bracket yet, you can still invest.  Even though you may have less money to invest when you are younger, it is still important to invest because your money will have more time to grow in the market.
-
-            </p>
-            <h2>Take the quiz to test how much you've learned!</h2>
-            <form id='quiz'></form>
-            <script>loadQuestion(0);</script>
-        </div>
-    </body>
+      </p>
+      <h2>Take the quiz to test how much you've learned!</h2>
+      <div id='quiz'></div>
+      <script>loadQuestion(0);</script>
+    </div>
+  </body>
 </html>
