--- a/public/login/index.html
+++ b/public/login/index.html
@@ -4,6 +4,11 @@
         <title>Financial Literacy for Youth</title>
         <meta charset="utf-8">
         <link href="../style.css" rel="stylesheet">
+        <style>
+          body{
+            color: black;
+          }
+        </style>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="../script.js"></script>
     </head>
