--- a/public/lessons/index.html
+++ b/public/lessons/index.html
@@ -36,5 +36,6 @@
               </p>
               <img src="spendwisely.jpg" class="lessonimg">
             </div><br>
+            <!-- <b>want to add a lesson here? <a href="https://github.com/isuckatprogram/Hackmann2020">start a pull request</a></b> -->
     </body>
 </html>
