--- a/public/simulator/index.html
+++ b/public/simulator/index.html
@@ -11,7 +11,7 @@
         <header id="header"></header>
         <section>
             <div>
-                <h h style="color:blue;">This simulation was created to give young learners the chance to experiment and try out different stratagies in terms of investing. The game gives the participants a chance to find which stratagies work, and don't work when banking or investing.</h1>
+                <h style="color:lightblue;">This simulation was created to give young learners the chance to experiment and try out different stratagies in terms of investing. The game gives the participants a chance to find which stratagies work, and don't work when banking or investing.</h1>
                 <a href="https://prezi.com/view/p0Gy4D1W77OfqK26kYEi/">Click Me</a>
             </div>
         </section>
